# scriptly

./: .env.example  .gitignore  GEMINI.md  README.md  build-docker.ps1  build-docker.sh  dev.ps1  docker-compose.yml
scriptly-api/: Dockerfile  GEMINI.md  main.py  pyproject.toml  requirements.txt
scriptly-api/app/application/services/: ai_service.py  archiving_service.py  character_service.py  curation_service.py  event_service.py  export_service.py  file_service.py  insight_service.py  prompt_templates.py
scriptly-api/app/domain/: models.py  schemas.py
scriptly-api/app/infrastructure/: database.py
scriptly-api/app/infrastructure/external_api/: naver_api.py
scriptly-api/app/interface/api/v1/: archive.py  characters.py  events.py  insight.py  news.py  projects.py
scriptly-api/scripts/: check_db.py  check_db_schema.py  check_models.py  create_event_table.py  create_tables.py  migrate_purpose.py  recreate_db.py  tmp_add_role.py  tmp_fix_db_v3.py
scriptly-docs/: DATA_MODEL.md  HANDOVER_GUIDE.md  REFACTORING_PLAN.md  distribution_plan.md  project_evaluation.md  핵심 목표
scriptly-web/: Dockerfile  GEMINI.md  package-lock.json  package.json
scriptly-web/src/app/: globals.css  layout.tsx  page.tsx
scriptly-web/src/components/features/archive/: ArchiveDetailPanel.tsx  ArchiveView.tsx
scriptly-web/src/components/features/curation/: CurationDetailPanel.tsx  CurationFeed.tsx
scriptly-web/src/components/shared/: AnalysisUnifiedView.tsx
scriptly-web/src/hooks/: useArchive.ts  useCuration.ts  useInsightLab.ts
scriptly-web/src/lib/: utils.ts
(+15 files in other folders)
